--- a/src/components/Prueba/Reagendamiento/Reagendamiento.css
+++ b/src/components/Prueba/Reagendamiento/Reagendamiento.css
@@ -1,19 +1,101 @@
 .Reagendamiento {
   display: flex;
   flex-direction: column;
-  gap: .5rem;
+  height: 100vh;
 }
 
 .Reagendamiento__calendario {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  margin-right: 1rem;
   background-color: var(--color-bordes);
-  border: 1px solid var(--color-bordes);
+  border-left: 1px solid var(--color-bordes);
   gap: 1px;
+  flex: 1;
+  max-height: 100vh;
+  overflow-x: visible;
+  overflow-y: scroll;
+  scrollbar-width: .5rem;
+  scrollbar-color: blue lightgray;
+}
+
+.Reagendamiento__calendario::-webkit-scrollbar {
+  width: .5rem;
+  background-color: lightgray;
+}
+
+.Reagendamiento__calendario::-webkit-scrollbar-thumb {
+  border-radius: .15rem;
+  background-color: blue;
+}
+
+.Reagendamiento__contenedor_titulos_dias {
+  grid-column: span 7;
+  display: grid;
+  grid-template: 1fr / repeat(7, 1fr);
+  background-color: var(--color-fondo-claro);
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  border-bottom: 1px solid var(--color-bordes);
+  border-left: 1px solid var(--color-bordes);
+  padding-right: .5rem;
 }
 
 .Reagendamiento__celda_calendario {
-  height: 14vh;
   background-color: var(--color-fondo-claro);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: .4rem;
+  gap: .6rem;
+  position: relative;
+  height: 10rem;
+}
+
+.Reagendamiento__celda_calendario--pasado div {
+  opacity: .5;
+}
+
+.Reagendamiento__dia {
+  font-size: .5rem;
+  text-transform: uppercase;
+  text-align: center;
+  padding: .25rem 0;
+}
+
+.Reagendamiento__fecha {
+  font-size: .6rem;
+  font-weight: 500;
+}
+
+.Reagendamiento__fecha--hoy {
+  border-radius: 50%;
+  box-shadow: 0 0 0 .25rem blue;
+  background-color: blue;
+  color: var(--color-texto-claro);
+  min-width: .5rem;
+  min-height: .5rem;
+}
+
+.Reagendamiento__contenedor_horas {
+  display: flex;
+  flex-direction: column;
+  gap: .6rem;
+  width: 100%;
+}
+
+.Reagendamiento__hora {
+  font-size: .6rem;
+  align-self: flex-start;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: .25rem;
+}
+
+.Reagendamiento__circulito {
+  width: .45rem;
+  height: .45rem;
+  border-radius: 50%;
+  background-color: lightgray;
 }
