--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,14 @@ a {
 
 @font-face {
   font-family: 'Roboto';
+  src: url('assets/fonts/Roboto-Medium.ttf') format('ttf');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
   src: url('assets/fonts/Roboto-Bold.ttf') format('ttf');
   font-weight: bold;
   font-style: normal;
