--- a/src/components/Prueba/Prueba.css
+++ b/src/components/Prueba/Prueba.css
@@ -7,16 +7,18 @@
 }
 
 .Prueba__subtitulo {
-  opacity: .5;
+  color: rgba(0, 0, 0, .75);
   font-size: 1.5rem;
   font-weight: 500;
   line-height: 1.25;
+  animation: aparece 1.25s ease both;
 }
 
 .Prueba__titulo {
   font-size: 2.5rem;
   font-weight: bold;
   line-height: 1.25;
+  animation: aparece 1.25s 1.25s ease both;
 }
 
 .Prueba__contenedor_formulario {
@@ -32,6 +34,10 @@
   position: absolute;
   top: 1rem;
   left: 1rem;
+  display: flex;
+  align-items: center;
+  gap: .5rem;
+  color: var(--color-texto);
 }
 
 .Prueba__contenedor_resultado {
@@ -49,6 +55,7 @@
   outline: none;
   box-shadow: 0 0 0 .1rem gray;
   transition: all .25s ease;
+  animation: aparece 2s 2s ease both;
 }
 
 .Prueba__textarea:focus {
@@ -56,11 +63,22 @@
 }
 
 .Prueba__boton_procesar {
-  background-color: var(--color-oscuro);
+  background: var(--color-oscuro);
   color: var(--color-texto-claro);
-  padding: 2rem;
+  padding: 2rem 2.5rem;
   border-radius: 1rem;
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: normal;
+  transition: all .25s ease;
+  box-shadow: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   align-self: flex-start;
+  animation: aparece 2s 2s ease both;
+}
+
+.Prueba__boton_procesar:hover {
+  box-shadow: 0 0 .25rem var(--color-sombras);
+  background: var(--color-oscuro-hover);
 }
