--- a/src/components/Prueba/Confirmacion/BarraConfirmacion/BarraConfirmacion.css
+++ b/src/components/Prueba/Confirmacion/BarraConfirmacion/BarraConfirmacion.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   gap: 2rem;
+  width: 42rem;
 }
 
 .BarraConfirmacion__titulo {
@@ -18,7 +19,7 @@
   padding: 1rem;
   border-radius: .5rem;
   font-size: 1.75rem;
-  transition: all .5s ease-in-out;
+  transition: all .75s ease-in-out;
 }
 
 .BarraConfirmacion--destacada {
