--- a/src/components/Prueba/Prueba.css
+++ b/src/components/Prueba/Prueba.css
@@ -36,8 +36,15 @@
   place-self: center stretch;
 }
 
+.Prueba__contenedor_textarea {
+  display: flex;
+  flex-direction: column;
+  height: 35vh;
+  position: relative;
+}
+
 .Prueba__textarea {
-  height: 30vh;
+  flex: 1;
   font-size: 2.5rem;
   padding: 1rem;
   resize: none;
@@ -50,8 +57,54 @@
   animation: aparece 2s .75s ease both;
 }
 
+.Prueba__contenedor_botones_input {
+  display: flex;
+  gap: .25rem;
+  position: absolute;
+  bottom: .5rem;
+  left: .5rem;
+}
+
+.Prueba__boton_input {
+  font-size: 2.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.Prueba__modal_emojis {
+  position: absolute;
+  bottom: 3.5rem;
+  left: .25rem;
+  display: flex;
+  gap: .25rem;
+  background-color: rgba(0, 0, 0, .15);
+  padding: .25rem .5rem;
+  border-radius: 9in;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(.25rem);
+  transition: all .25s ease;
+}
+
+.Prueba__modal_emojis--visible {
+  opacity: 1;
+  transform: translateY(0);
+  pointer-events: all;
+}
+
+.Prueba__modal_emojis_boton {
+  font-size: 1.75rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
 .Prueba__textarea::placeholder {
-  opacity: .25;
+  opacity: .35;
 }
 
 .Prueba__textarea:focus {
