--- a/src/components/Prueba/Prueba.css
+++ b/src/components/Prueba/Prueba.css
@@ -82,7 +82,7 @@
   display: flex;
   gap: .25rem;
   background-color: rgba(0, 0, 0, .15);
-  padding: .25rem .5rem;
+  padding: .25rem .65rem .45rem;
   border-radius: 9in;
   opacity: 0;
   pointer-events: none;
@@ -101,6 +101,12 @@
   background: none;
   border: none;
   cursor: pointer;
+  transform: scale(1);
+  transition: all .25s ease;
+}
+
+.Prueba__modal_emojis_boton:hover {
+  transform: scale(1.25);
 }
 
 .Prueba__textarea::placeholder {
