--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ a {
 
 @font-face {
   font-family: 'Roboto';
-  src: url('assets/fonts/Roboto-Regular.ttf') format('ttf');
+  src: url('assets/fonts/Roboto-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -30,7 +30,7 @@ a {
 
 @font-face {
   font-family: 'Roboto';
-  src: url('assets/fonts/Roboto-Medium.ttf') format('ttf');
+  src: url('assets/fonts/Roboto-Medium.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -38,7 +38,7 @@ a {
 
 @font-face {
   font-family: 'Roboto';
-  src: url('assets/fonts/Roboto-Bold.ttf') format('ttf');
+  src: url('assets/fonts/Roboto-Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
