barras mas felices

--- a/src/components/Prueba/Confirmacion/BarraConfirmacion/BarraConfirmacion.css
+++ b/src/components/Prueba/Confirmacion/BarraConfirmacion/BarraConfirmacion.css
@@ -8,17 +8,20 @@
 .BarraConfirmacion__titulo {
   width: 10rem;
   max-width: 10rem;
-  font-size: 1.5rem;
-  font-weight: bold;
+  font-size: 2rem;
   text-align: right;
+  color: var(--color-blanco);
+  text-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5);
 }
 
 .BarraConfirmacion__porcentaje {
-  background: lightgray;
+  background: var(--color-gris-claro);
+  color: var(--color-negro);
+  text-shadow: none;
   flex: 1;
   padding: 1rem;
   border-radius: .5rem;
-  font-size: 1.75rem;
+  font-size: 2rem;
   transition: all .75s ease-in-out;
 }
 
