--- a/src/components/Prueba/Prueba.css
+++ b/src/components/Prueba/Prueba.css
@@ -29,7 +29,13 @@
   display: flex;
   align-items: center;
   gap: .5rem;
-  color: var(--color-texto);
+  color: var(--color-blanco);
+  font-size: 1.35rem;
+  opacity: .7;
+}
+
+.Prueba__link_reinicio:hover {
+  opacity: 1;
 }
 
 .Prueba__contenedor_resultado {
@@ -174,7 +180,7 @@
 }
 
 .Prueba__textarea:focus {
-  box-shadow: 0 0 0 .25rem black;
+  box-shadow: 0 0 0 .25rem rgb(240, 240, 240), 0 0 1rem white;
 }
 
 .Prueba__boton_procesar {
