--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,11 @@ a {
 @keyframes aparece {
   0% {
     opacity: 0;
+    pointer-events: none;
   }
   100% {
     opacity: 1;
+    pointer-events: all;
   }
 }
 
