--- a/src/components/Prueba/Confirmacion/Confirmacion.css
+++ b/src/components/Prueba/Confirmacion/Confirmacion.css
@@ -35,4 +35,5 @@
   width: 100%;
   color: var(--color-blanco);
   text-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.75);
 }
