--- a/src/components/Prueba/Reagendamiento/Reagendamiento.css
+++ b/src/components/Prueba/Reagendamiento/Reagendamiento.css
@@ -18,7 +18,7 @@
   margin-top: 3rem;
   margin-bottom: .5rem;
   text-align: center;
-  max-width: 30ch;
+  max-width: calc(100% - 5rem);
   min-height: 4rem;
 }
 
@@ -41,6 +41,12 @@
   filter: drop-shadow(0 0 .25rem rgba(0, 0, 0, 0.5));
   font-size: 1.75rem;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.Reagendamiento__texto_mes::first-letter {
+  text-transform: capitalize;
 }
 
 .Reagendamiento__calendario {
@@ -87,7 +93,7 @@
   padding: .4rem;
   gap: .6rem;
   position: relative;
-  height: 10rem;
+  padding-bottom: 1.5rem;
 }
 
 .Reagendamiento__celda_calendario:first-child {
