--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,16 @@
   );
   background-size: 400% 400%;
   animation: mueve-fondo 25s ease-in-out infinite;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.App__progreso {
+  height: .25rem;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  transition: all .1s ease;
+  z-index: 2;
 }
