--- a/src/components/Prueba/Confirmacion/Confirmacion.css
+++ b/src/components/Prueba/Confirmacion/Confirmacion.css
@@ -37,3 +37,9 @@
   text-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5);
   border-top: 1px solid rgba(255, 255, 255, 0.75);
 }
+
+@media (orientation: portrait) {
+  .Confirmacion__consulta {
+    display: none;
+  }
+}
