--- a/src/ModalContacto/ModalContacto.css
+++ b/src/ModalContacto/ModalContacto.css
@@ -1,11 +1,34 @@
 .ModalContacto {
   position: absolute;
-  background-color: var(--color-blanco);
-  top: 3rem;
-  left: 3rem;
-  right: 3rem;
-  bottom: 3rem;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 3;
+  background-color: rgba(0, 0, 0, .25);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: all .2s ease;
+}
+
+.ModalContacto--activo {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.ModalContacto__contenedor {
+  padding: 2rem;
+  background-color: var(--color-blanco);
+  position: relative;
+}
+
+.ModalContacto__boton_cerrar {
+  position: absolute;
+  top: .5rem;
+  right: .5rem;
 }
 
 .ModalContacto__titulo {
@@ -15,6 +38,13 @@
 .ModalContacto__formulario {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
+}
+
+.ModalContacto__formulario_campo {
+  display: flex;
+  flex-direction: column;
+  gap: .25rem;
 }
 
 .ModalContacto__boton {
