--- a/src/components/Prueba/Confirmacion/BarraConfirmacion/BarraConfirmacion.css
+++ b/src/components/Prueba/Confirmacion/BarraConfirmacion/BarraConfirmacion.css
@@ -28,3 +28,10 @@
 .BarraConfirmacion--destacada {
   font-weight: bold;
 }
+
+@media (orientation: portrait) {
+  .BarraConfirmacion {
+    width: 100%;
+    padding: 0 4rem;
+  }
+}
