--- a/src/components/Prueba/Confirmacion/BarraConfirmacion/BarraConfirmacion.css
+++ b/src/components/Prueba/Confirmacion/BarraConfirmacion/BarraConfirmacion.css
@@ -28,7 +28,7 @@
   font-weight: bold;
 }
 
-@media (orientation: portrait) {
+@media (max-width: 1024px) {
   .BarraConfirmacion {
     width: 100%;
     padding: 0 4rem;
